# pcl_examples

./: .gitignore  CMakeLists.txt  package.xml
cfg/: Parameters.cfg
clouds/: pallet.pcd
config/: parameters.yaml
include/pcl_interface/: pcl_interface.h
src/: 3d_recognition.cpp  color_based.cpp  euclidian_extraction.cpp  main.cpp  moment_of_inertia.cpp  pallet.cpp  pcl_interface.cpp  plane.cpp  region_growing.cpp
