<?xml version="1.0"?>
<package format="2">
    <name>pcl_interface</name>
    <version>0.1.0</version>
    <description>A ROS package for PCL interface</description>
    <maintainer email="cenkcetix@gmail.com">Cenk Cetin</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend> 
    <exec_depend>roscpp</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend> 
    <build_depend>dynamic_reconfigure</build_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <export>
        <build_type>catkin</build_type>
    </export>
</package>
